[workspace]
resolver = "2"
members = ["burn-auction"]
# exclude = ["contracts/umee"]

[workspace.package]
edition = "2021"
license = "Mozilla Public License Version 2.0"
repository = "https://github.com/umee-network/cw-contracts"
authors = [
    "Umee Team (https://ux.xyz/)",
]

[profile.release]
codegen-units = 1
opt-level = 3
# link time optimization
lto = true
panic = "abort"
overflow-checks = true
debug = false
debug-assertions = false
rpath = false

[workspace.dependencies]
cosmwasm-schema = "1.5"
cosmwasm-std = "1.5"
# {version = "1.5", features = ["cosmwasm_1_3"]} # "cosmwasm_1_4" # <- Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"

schemars = "0.8"
serde = {version = "1.0.195", default-features = false, features = ["derive"]}
thiserror = {version = "1.0.49"}

sylvia = "0.9.3"
