[package]
name = "burnauction"
version = "0.1.0"
authors = { workspace = true }
#edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = "1.5"
# itertools.workspace = true
# common = { path = "../common" }

[dev-dependencies]
# anyhow.workspace = true
