[package]
name = "burn-auction"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true

schemars.workspace=true
serde.workspace=true
thiserror.workspace=true

# [dev-dependencies]
# cw-multi-test = "0.18.0"
